[tool.poetry]
name = "atma8"
version = "0.1.0"
description = ""
authors = ["hiroto0227 <hiroto@wantedly.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
pandas-profiling = "^2.9.0"
jupyter = "^1.0.0"
lightgbm = "^3.1.0"
nltk = "^3.5"
mcs-kfold = "^0.1.1"
sentencepiece = "^0.1.94"
catboost = "^0.24.3"
xgboost = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
